--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "run-sequence": "^1.1.4",
     "svg2png": "^2.0.0",
     "ttf2woff2": "^2.0.3"
+  },
+  "dependencies": {
+    "is-path-inside": "^2.0.0",
+    "path-is-inside": "^1.0.2"
   }
 }
